<resources>
    <string name="app_name">HW5</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_id_here">Enter ID Here</string>
    <string name="register">Register</string>
    <string name="condition">Condition</string>
    <string name="borrowed_by">Borrowed By</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="enter_name_of_friend">Enter Name of Friend</string>
    <string name="enter_friend_name">Enter Friend Name</string>
    <string name="enter_friend_s_name">Enter Friend\'s Name</string>
</resources>
