<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextLiPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:hint="@string/enter_password"
        />

    <EditText
        android:id="@+id/editTextLiId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_id_here"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/buttonLiSi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/buttonLiRg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="180dp"
        android:text="@string/register"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>