<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CheckActivity">

    <EditText
        android:id="@+id/editTextChTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/title"/>

    <TextView
        android:id="@+id/textViewChAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/author" />

    <TextView
        android:id="@+id/textViewChCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:hint="@string/condition" />

    <TextView
        android:id="@+id/textViewChBorrowedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/borrowed_by" />

    <Button
        android:id="@+id/buttonChCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:text="Check Database" />

</RelativeLayout>