<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BorrowerActivity">



    <EditText
        android:id="@+id/editTextBrBorrowedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_friend_s_name" />



    <EditText
        android:id="@+id/editTextBrTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/editTextBrAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/author" />

    <EditText
        android:id="@+id/editTextBrCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:hint="@string/condition" />

    <Button
        android:id="@+id/buttonBrLookUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop = "100dp"
        android:text="Look Up Friend" />

</RelativeLayout>