<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteActivity">

    <EditText
        android:id="@+id/editTextDlTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/editTextDlAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/author" />

    <EditText
        android:id="@+id/editTextDlCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:hint="@string/condition" />

    <EditText
        android:id="@+id/editTextDlBorrowedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/borrowed_by" />

    <Button
        android:id="@+id/buttonDlCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:text="Check Database" />

    <Button
        android:id="@+id/buttonDlDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop = "340dp"
        android:text="Delete Book" />
</RelativeLayout>